tests/machine/x/go/query_sum_select.error
Error on line 0: run error: exit status 1
panic: sum() expects list or group

goroutine 1 [running]:
main._sum({0x207fbe0?, 0xc00021fef8?})
	/workspace/mochi/tests/machine/x/go/query_sum_select.go:48 +0x2bf
main.main.func1(...)
	/workspace/mochi/tests/machine/x/go/query_sum_select.go:18
main.main()
	/workspace/mochi/tests/machine/x/go/query_sum_select.go:23 +0x8d
exit status 2

1: //go:build ignore
